[package]
name = "w25qxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
linux-embedded-hal = "0.3.0"